Cleanup and some added examples

--- a/sections/b.main/2.background/1.sroiq.tex
+++ b/sections/b.main/2.background/1.sroiq.tex
@@ -1,24 +1,24 @@
 % Introduce what description logcs are 
 Formally, an ontology is a set of statements expressed in a suitable logical language and with the purpose of describing a specific domain of interest. While ontologies can be represented using a number of different formalisms, for the use in automated reasoning a trade-off must be made between expressivity and practicality. For example, first-order logic (FOL) is more expressive than propositional logic, but this added expressivity comes at the cost of decidability. In addition to decidability, scalability must also be considered in the choice and design of the used representation of the knowledge.
 
-\emph{Description logics} (DL) are often used for building ontologies. They encompass a family of related knowledge representation languages and are often fragments of FOL\footnote{While description logics are fragments of FOL in the sense that for every ontology in a given description logic, there exists a FOL theory that has the same models, the syntax used by description logics is different from the syntax used in FOL, and as such a DL axiom is not a valid FOL sentence.} with equality, as is the case with the description logics $\SROIQ$ which is the main focus of this work. DLs are almost always designed to be decidable, and generally offer a favourable trade-off between expressivity and complexity of reasoning tasks. Different description logics have been developed for different applications, that feature varying levels of expressivity.
+\emph{Description logics} (DL) are often used for building ontologies. They encompass a family of related knowledge representation languages and are often fragments of FOL\footnote{While DLs are fragments of FOL in the sense that for every ontology in a given DL, there exists a FOL theory that has the same models, the syntax used by DLs is different from the syntax used in FOL, and as such a DL axiom is not a valid FOL sentence.} with equality, as is the case with the DLs $\SROIQ$ which is the main focus of this work. DLs are almost always designed to be decidable, and generally offer a favourable trade-off between expressivity and complexity of reasoning tasks. Different DLs have been developed for different applications, that feature varying levels of expressivity.
 
-In this section will briefly introduce the description logic $\SROIQ$ \cite{horrocks2006even, rudolph2011foundations, baader_horrocks_lutz_sattler_2017}. A more detailed description, containing more information about the semantics, can be found in \cref{sroiq-appendix}.
+In this section will briefly introduce the DL $\SROIQ$ \cite{horrocks2006even, rudolph2011foundations, baader_horrocks_lutz_sattler_2017}. A more detailed description, including more explaintions and examples, can be found in \cref{sroiq-appendix}.
 
-\subsubsection{The Syntax of \SROIQ} \label{sroiq-syntax}
+\subsection{The Syntax of \SROIQ} \label{sroiq-syntax}
 
 % TODO
 % TODO argue for my version of regularity
 
-\subsubsection{The Semantics of \SROIQ} \label{sroiq-semantics}
+\subsection{The Semantics of \SROIQ} \label{sroiq-semantics}
 
 % TODO
 
-\subsubsection{The \ALC Description Logic}
+\subsection{The \ALC Description Logic}
 
-Since \ALC will be used for part of the discussion on related work, this is a brief section discussing what features are included in \ALC, and which are not. \ALC is a much less expressive description logic compared to \SROIQ. The vocabulary in \ALC consists of the same components $N_C$, $N_R$, and $N_I$ as in \SROIQ. In \ALC, concept expressions are formed only using the following grammar.
+Since \ALC will be used for part of the discussion on related work, this is a brief section discussing what features are included in \ALC, and which are not. \ALC is a much less expressive logic compared to \SROIQ. The vocabulary in \ALC consists of the same components $N_C$, $N_R$, and $N_I$ as in \SROIQ. In \ALC, concept expressions are formed only using the following grammar.
 \begin{align*}
   C &::= \bot \mid \top \mid A \mid \neg C \mid C \sqcap C \mid C \sqcup C \mid \forall R.C \mid \exists R.C \enspace,
 \end{align*}
-where $A \in N_C$ is a concept name and $r \in N_R$ is a role name. The universal role, or inverse roles are not part of \ALC. Further, \ALC supports only two types of axioms, concept inclusion axioms of the form $C \sqsubseteq D$ and class assertions $C(a)$ where $C$ and $D$ are concepts and $a \in N_I$ is an individual name. It should be noted that \ALC has the unique name assumption, meaning that two different individual names must necessarily refer to different elements of the domain in every interpretation. Aside from that, the axioms and concepts have the same semantic meaning as their direct counterparts in \SROIQ.
+where $A \in N_C$ is a concept name and $r \in N_R$ is a role name. The universal role, or inverse roles are not part of \ALC. Further, \ALC supports only two types of axioms, GCIs of the form $C \sqsubseteq D$ and class assertions $C(a)$ where $C$ and $D$ are concepts and $a \in N_I$ is an individual name. It should be noted that \ALC has the unique name assumption, meaning that two different individual names must necessarily refer to different elements of the domain in every interpretation. Aside from that, the axioms and concepts have the same semantic meaning as their direct counterparts in \SROIQ.
 
