--- a/sections/b.main/5.evaluation/2.cache.tex
+++ b/sections/b.main/5.evaluation/2.cache.tex
@@ -7,10 +7,10 @@ Three versions of the upward and downward cover have been considered, the uncach
   \scriptsize
   \centering
   \begin{tabular}{|l|rrr|rrr|rrr|}
-    \hline
-    & \multicolumn{9}{c|}{\hspace{-4mm}Reasoner calls per weakening} \\
-    & \multicolumn{3}{c}{Full caching} & \multicolumn{3}{c}{Simple caching} & \multicolumn{3}{c|}{No caching} \\
-    & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{10} & \multicolumn{1}{c}{100} & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{10} & \multicolumn{1}{c}{100} & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{10} & 100 \\
+    \cline{2-10}
+    \multicolumn{1}{l|}{} & \multicolumn{9}{c|}{\hspace{-4mm}Reasoner calls per weakening} \\
+    \multicolumn{1}{l|}{} & \multicolumn{3}{c}{Full caching} & \multicolumn{3}{c}{Simple caching} & \multicolumn{3}{c|}{No caching} \\
+    \multicolumn{1}{l|}{} & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{10} & \multicolumn{1}{c}{100} & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{10} & \multicolumn{1}{c}{100} & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{10} & 100 \\
     \hline
     admin & 1096 & 222 & 35
       & 15138 & 2115 & 236
