--- a/sections/b.main/3.theory/2.rbox.tex
+++ b/sections/b.main/3.theory/2.rbox.tex
@@ -1,4 +1,4 @@
-Let us now consider the weakening of simple and complex role inclusion axioms. To ensure that by adding weakened axioms we do not cause a constraint violation in existing axioms and concepts, we choose the allowed weakening for RIAs such that all roles that are simple in $\Omcfull$, are also simple after adding to it a weakening of one of its axioms. We observe that for complex RIAs $S_1 \circ \cdots \circ S_n \sqsubseteq R$ we should not refine the role $R$. Since all roles returned by our refinement operator will be simple in $\Omcfull$, replacing $R$ with a refinement $R'$ would create a new axiom which, when added to the ontology, would make the role $R'$ which was simple in $\Omcfull$ non-simple. A similar argument can be made for refining $R$ in a simple RIA $S \sqsubseteq R$ where the role $S$ is non-simple in $\Omcfull$. Therefore, The only case in which it is possible to refine the super role of a RIA during axiom weakening requires that the RIA is simple and additionally that the sub role of the RIA is simple in $\Omcfull$.
+Let us now consider the weakening of simple and complex RIAs. To ensure that by adding weakened axioms we do not cause a constraint violation in existing axioms and concepts, we choose the allowed weakening for RIAs such that all roles that are simple in $\Omcfull$, are also simple after adding to it a weakening of one of its axioms. We observe that for complex RIAs $S_1 \circ \cdots \circ S_n \sqsubseteq R$ we should not refine the role $R$. Since all roles returned by our refinement operator will be simple in $\Omcfull$, replacing $R$ with a refinement $R'$ would create a new axiom which, when added to the ontology, would make the role $R'$ which was simple in $\Omcfull$ non-simple. A similar argument can be made for refining $R$ in a simple RIA $S \sqsubseteq R$ where the role $S$ is non-simple in $\Omcfull$. Therefore, The only case in which it is possible to refine the super role of a RIA during axiom weakening requires that the RIA is simple and additionally that the sub role of the RIA is simple in $\Omcfull$.
 
 When it comes to refining the left-hand side of RIAs, we do not need any special restrictions. The important observation here is that all roles that are returned by the refinement will be simple. This means that in a simple RIA $R \sqsubseteq S$, even if $S$ is simple, replacing $R$ with another simple role will not cause $S$ to become non-simple. For a complex RIA $S_1 \circ \cdots \circ S_n \sqsubseteq R$ on the other hand, the role $R$ must already have been non-simple in $\Omcfull$, and replacing any $S_i$ with a refinement has no effect on whether a role is simple or non-simple.
 
