--- a/sections/b.main/5.evaluation/1.quality.tex
+++ b/sections/b.main/5.evaluation/1.quality.tex
@@ -40,8 +40,8 @@ This process, both making the ontology inconsistent and repairing it, was repeat
   \scriptsize
   \centering
   \begin{tabular}{|l|cc|}
-    \hline
-    & IIC w.r.t. repair by removal & IIC w.r.t. maximal consistent subset \\
+    \cline{2-3}
+    \multicolumn{1}{l|}{} & IIC w.r.t. repair by removal & IIC w.r.t. maximal consistent subset \\
     \hline
     admin & 0.53 [0.47; 0.59] & 0.39 [0.31; 0.47] \\
     ahso & 0.56 [0.50; 0.62] & 0.51 [0.44; 0.57] \\
