--- a/sections/c.back/f.eval.tex
+++ b/sections/c.back/f.eval.tex
@@ -67,11 +67,12 @@
   \scriptsize
   \begin{widepage}[5cm]
     \centering
+    \addtolength{\tabcolsep}{-1mm}
     \begin{tabular}{|l|rrrrrr|rrrrrr|rrrrrr|}
-      \hline
-      & \multicolumn{18}{c|}{\hspace{-9mm}Reasoner calls per weakening} \\
-      & \multicolumn{6}{c}{Caching using transitivity} & \multicolumn{6}{c}{Simple caching} & \multicolumn{6}{c|}{No caching} \\
-      & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{5} & \multicolumn{1}{c}{10} & \multicolumn{1}{c}{20} & \multicolumn{1}{c}{50} & \multicolumn{1}{c}{100} & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{5} & \multicolumn{1}{c}{10} & \multicolumn{1}{c}{20} & \multicolumn{1}{c}{50} & \multicolumn{1}{c}{100} & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{5} & \multicolumn{1}{c}{10} & \multicolumn{1}{c}{20} & \multicolumn{1}{c}{50} & 100 \\
+      \cline{2-19}
+      \multicolumn{1}{l|}{} & \multicolumn{18}{c|}{\hspace{-9mm}Reasoner calls per weakening} \\
+      \multicolumn{1}{l|}{} & \multicolumn{6}{c}{Caching using transitivity} & \multicolumn{6}{c}{Simple caching} & \multicolumn{6}{c|}{No caching} \\
+      \multicolumn{1}{l|}{} & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{5} & \multicolumn{1}{c}{10} & \multicolumn{1}{c}{20} & \multicolumn{1}{c}{50} & \multicolumn{1}{c}{100} & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{5} & \multicolumn{1}{c}{10} & \multicolumn{1}{c}{20} & \multicolumn{1}{c}{50} & \multicolumn{1}{c}{100} & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{5} & \multicolumn{1}{c}{10} & \multicolumn{1}{c}{20} & \multicolumn{1}{c}{50} & 100 \\
       \hline
       admin & 1096 & 381 & 222 & 131 & 64 & 35
         & 15138 & 4072 & 2115 & 1092 & 459 & 236
@@ -108,11 +109,12 @@
   \scriptsize
   \begin{widepage}[4cm]
     \centering
+    \addtolength{\tabcolsep}{-1mm}
     \begin{tabular}{|l|l|rrrrrr|rrrrrr|rrrrrr|}
-      \hline
-      & & \multicolumn{18}{c|}{\hspace{-6mm}Time per weakening [ms]} \\
-      & & \multicolumn{6}{c}{Caching using transitivity} & \multicolumn{6}{c}{Simple caching} & \multicolumn{6}{c|}{No caching} \\
-      & & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{5} & \multicolumn{1}{c}{10} & \multicolumn{1}{c}{20} & \multicolumn{1}{c}{50} & \multicolumn{1}{c}{100} & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{5} & \multicolumn{1}{c}{10} & \multicolumn{1}{c}{20} & \multicolumn{1}{c}{50} & \multicolumn{1}{c}{100} & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{5} & \multicolumn{1}{c}{10} & \multicolumn{1}{c}{20} & \multicolumn{1}{c}{50} & 100 \\
+      \cline{3-20}
+      \multicolumn{2}{l|}{} & \multicolumn{18}{c|}{\hspace{-6mm}Time per weakening [ms]} \\
+      \multicolumn{2}{l|}{} & \multicolumn{6}{c}{Caching using transitivity} & \multicolumn{6}{c}{Simple caching} & \multicolumn{6}{c|}{No caching} \\
+      \multicolumn{2}{l|}{} & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{5} & \multicolumn{1}{c}{10} & \multicolumn{1}{c}{20} & \multicolumn{1}{c}{50} & \multicolumn{1}{c}{100} & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{5} & \multicolumn{1}{c}{10} & \multicolumn{1}{c}{20} & \multicolumn{1}{c}{50} & \multicolumn{1}{c}{100} & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{5} & \multicolumn{1}{c}{10} & \multicolumn{1}{c}{20} & \multicolumn{1}{c}{50} & 100 \\
       \hline
       \multirow{8}{*}{FaCT++} & admin
         & 83.6 & 23.6 & 15.7 & 7.5 & 4.2 & 2.6
